# ft_printf

./: CMakeLists.txt  Makefile  free.c  ft_printf.h  pf_flag_lst_create.c  pf_flags_parcer.c  pf_initiation_part_1.c  pf_itoabase.c  pf_main.c  pf_print_part_one.c  pf_print_part_two.c  pf_writer.c  radme.txt
libft/: Makefile
pftrintf/: CMakeLists.txt  Makefile  free.c  ft_printf.h  pf_fix.c  pf_fix_part_two.c  pf_flag_lst_create.c  pf_flags_parcer.c  pf_float_print.c  pf_initiation_part_1.c  pf_itoabase.c  pf_main.c  pf_print_csp%.c  pf_print_part_two.c  pf_validator_part_1.c  pf_writer.c
pftrintf/libft/: author  ft_strlen.c  get_next_line.c
pftrintf_2/: CMakeLists.txt  Makefile  ft_printf.h
pftrintf_2/src/: free.c  ft_printf.h  libft.h  pf_fix.c  pf_fix_part_two.c  pf_flag_lst_create.c  pf_flags_parcer.c  pf_float_print.c  pf_initiation_part_1.c  pf_itoabase.c  pf_main.c  pf_print_csp%.c  pf_print_part_two.c  pf_writer.c
src/: pf_flags_parcer.c  pf_itoabase.c  pf_main.c
